css background on TR doesn't always work on IE7, setting the style on TD children solves the problem (fixes #6977)
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@10027 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdkCommon.css
+++ b/View/webapp/wdk/css/wdkCommon.css
@@ -365,7 +365,7 @@ tr.lines {
 	background-color: #FFFFFF;
 }
 
-tr.linesalt {
+tr.linesalt > td {
 	background-color: #DDDDDD;
 }
 
